--- a/API/.env
+++ b/API/.env
@@ -1,2 +1,2 @@
-ALPHA_VANTAGE_API_KEY='VPKT2KL1AM3XNPVO'
-GEMINI_API_KEY='AIzaSyAH6NNn7qJbXh_al2KmXL5fSZLljjMSHvM'
+ALPHA_VANTAGE_API_KEY=''
+GEMINI_API_KEY=''
